--- a/students/templates/students/landing.html
+++ b/students/templates/students/landing.html
@@ -14,6 +14,7 @@
         {% if user.is_authenticated %}
         <p><a href="{% url 'logout' %}">Logout</a></p>
         {% endif %}
+        <p><a href="{% url 'index' %}">Students</a></p>
     </div>
 </body>
 </html>
