--- a/students/templates/students/student_form.html
+++ b/students/templates/students/student_form.html
@@ -10,10 +10,15 @@
 
     <form method="POST">
         {% csrf_token %}
-        {{ form }}
+        {% for field in form %}
+        <p>{{ field.name }}</p>
+        <p>{{ field }}</p>
+        {% endfor %}
         <button type="submit">Save</button>
     </form>
 
+    <br>
+    <a href="{% url 'index' %}">Back</a>
     {% if student %}
         <a href="{% url 'delete' student.id %}">Delete</a>
     {% endif %}
